Apply Nullability to `spring-integration-kafka` module
Related to: https://github.com/spring-projects/spring-integration/issues/10083

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>